added view project to external page

--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
 
 <body class="body">
 
-    <div class="toggle">
+    <div class="toggle" style="display: flex; justify-content: flex-end;">
         <ion-icon class="dark_light" id="l" name="contrast-outline"></ion-icon>
     </div>
     <div class="container">
-        <h1> <ion-icon name="code-outline"></ion-icon> Project Management Dashboard</h1>
+        <h1> <ion-icon name="code-outline"></ion-icon> Project Management Dashboard<ion-icon name="desktop-outline"></ion-icon></h1>
 
 
         <div class="form-container">
@@ -22,7 +22,7 @@
                 <div> Project Name
                     <input type="text" id="projectName" placeholder="Enter project name">
                 </div>
-                <div>Live URL
+                <div>Project Github Link
                     <input type="text" id="projectLink" placeholder="Insert URL to project">
                 </div>
                 <div class="time">
