--- a/project.html
+++ b/project.html
@@ -5,7 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Project</title>
 </head>
-<body>
-    
+<link rel="stylesheet" href="style.css">
+<body style="display: flex; justify-content: center; align-items: center; text-align: center;">
+    <table class="project" id="projectID">
+        
+    </table>
+
+    <script src="project.js">
+        // console.log("dataset",window.location);
+    </script>
 </body>
 </html>
