toggle projects visibility

--- a/index.html
+++ b/index.html
@@ -48,6 +48,9 @@
 
     <div class="projects-container">
         <h2 class="body" style="text-shadow: 1px 1px 1px  white;">Projects</h2>
+
+        <button style="width: 60px;" class="projectsShow" id="h"> Hide</button>
+
         <ul id="projectsLoad">
             <!-- :-)    List items to be loaded from javascript code :-)    -->
         </ul>
